<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.example.timepicker.TimerTextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="36sp"
            app:time="0" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_backspace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/one_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/two_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <!--red button, blue button-->
        <Button
            android:id="@+id/three_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/three_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/four_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/five_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/six_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/seven_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/eight_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/nine_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/zero_button_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dialog_set"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toStartOf="@+id/btn_set"
            android:layout_toLeftOf="@+id/btn_set"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dialog_cancel"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
